--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,7 +13,7 @@
 
     <div class="navbarLeft">
         <a href="/" class="navbarLogo">
-            <img src="/tocTempLogo.png" alt="Trans on Campus">
+            <img src="/tocTempLogo.png" class="logo" alt="Trans on Campus">
         </a>
 
         <ul class="navbarList">
@@ -96,8 +96,9 @@
         text-decoration: underline;
     }
     .navbarLogo img {
-        height: 70px;
-        /* margin-top: 10px; */
+        /* width: 3em; */
+        height: 3em;
+        /* margin: 0.5em;  */
     }
 
 </style>
