--- a/src/components/ResourceCard.astro
+++ b/src/components/ResourceCard.astro
@@ -5,21 +5,122 @@ interface Props {
 	image: string;
 	href: string;
     style: string;
+    tags: string[];
 }
 
-const { href, title, subtitle, image, style } = Astro.props;
+const { href, title, subtitle, image, style, tags } = Astro.props;
 ---
-
-<li class=`link-card ${style}`>
-	<a href={href} target="_blank" rel="noopener noreferrer">
-        <img src={image} alt={title} class="thumbnailImage"/>
-		<div class="titles">
-            <div class="title">
-                {title}
+<a href={href} class=`linkCardOuter ${style}`>
+        <div class="top">
+            <div class="image">
+                <img src={image} alt="image" />
             </div>
-            <div class="subtitle">
-                {subtitle}
+            <div class="content">
+                <div class="title">{title}</div>
+                <div class="subtitle">{subtitle}</div>
             </div>
         </div>
-	</a>
-</li>
+        <div class="bottom">
+            <div class="tags">
+                {tags.slice(0, 2).map((tag) => (
+                    <span class="tag">{tag}</span>
+                ))}
+            </div>
+            <!-- <img src="/icons/arrowPurpBig.png" alt="arrow" class="arrow" /> -->
+        </div>
+</a>
+
+<style>
+    .bottom {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.5rem;
+    }
+    .arrow {
+        width: 3rem;
+    }
+    .tags {
+        display: flex;
+        gap: 0.5rem;
+        margin-top: 1rem;
+    }
+    .tag {
+        background: #f3f3f7;
+        color: #0b0025;
+        padding: 0.5rem 1rem;
+        border-radius: 1rem;
+        font-size: .88rem;
+        letter-spacing: .03rem;
+        font-weight: 500;
+        font-family: "Metropolis", "Inter", system-ui, sans-serif;
+        transition: all 0.8s ease-in-out;
+    }
+    .tag:hover {
+        background: #e4e4e9;
+    }
+    .purble {
+        /* background: linear-gradient(29deg, rgba(116,76,213,1) 0%, rgba(108,57,200,1) 26%, rgba(116,76,213,1) 100%)!important; */
+        background: linear-gradient(29deg, rgb(223, 134, 0) 0%, rgb(221, 88, 0), rgb(223, 134, 0) 100%)!important;
+        color: #f9f7ff!important;
+    }
+    .linkCardOuter {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        position: relative;
+        text-align: left;
+        background:white;
+        border-radius: 2%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        
+        height: 30rem;
+        overflow: hidden;
+        flex-shrink: 0;
+        text-decoration: none;
+        transition: all 0.3s ease-in-out;
+    }
+    .linkCardOuter:hover {
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        transform: translateY(-0.3rem);
+    }
+    .image {
+        height: 12.81rem;
+        overflow: hidden;
+    }
+    .image img {
+        width: 100%;
+    }
+    .content {
+        padding: 1.5rem;
+        flex: 1;
+    }
+    .title {
+        font-size: 2rem;
+        font-weight: 700;
+        font-family: "Metropolis", "Inter", system-ui, sans-serif;
+        margin: 0;
+        margin-bottom: 1rem;
+        color: #0b0025;
+        line-height: 1.1;
+        /* max at 2 lines then ... */
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+    .subtitle {
+        font-size: 1rem;
+        font-weight: 400;
+        font-family: "Metropolis", "Inter", system-ui, sans-serif;
+        margin: 0;
+        color: #0b0025;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
+
+</style>
