--- a/src/components/ResourceCard.astro
+++ b/src/components/ResourceCard.astro
@@ -31,6 +31,9 @@ const { href, title, subtitle, image, style, tags } = Astro.props;
 </a>
 
 <style>
+    .greyBg {
+        background: #f9f7ff;
+    }
     .bottom {
         display: flex;
         justify-content: space-between;
