--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -5,7 +5,7 @@ import ResourceCard from '../components/ResourceCard.astro';
 const allPosts = await Astro.glob('../pages/resources/*.md');
 ---
 
-<Layout title="Trans on Campus Resources">
+<Layout title="Trans on Campus • Resources">
     <main>
         <!-- 
             Resources header
