--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/defaultLayout.astro';
 ---
 
-<Layout title="Trans on Campus 404">
+<Layout title="Trans on Campus • 404">
     <main>
         <img src="/jermaIcon.webp" alt="404" class="icon" />
         <h1>404: Page not Found</h1>
