📰 Added PDF support, added tags, more mobile support

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,7 @@
 <div class="navbar">
     <div class="navbarLeft">
         <a href="/" class="navbarLogo">
-            <img src="/tocIconRound.png" class="logo" alt="Trans on Campus">
+            <img src="/tocTempLogo.png" class="logo" alt="Trans on Campus">
         </a>
 
         <ul class="navbarList">
