--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,8 +5,8 @@ import Layout from '../layouts/defaultLayout.astro';
 <Layout title="Trans on Campus • 404">
     <main>
         <img src="/jermaIcon.webp" alt="404" class="icon" />
-        <h1>404: Page not Found</h1>
-        <p>please <a href="https://github.com/wiki-Bird/toc-website/issues" target="_blank" rel="noopener noreferrer">let us know</a> if this is an issue! :3</p>
+        <h1>404: Page not Found :(</h1>
+        <p>please <a href="https://github.com/wiki-Bird/toc-website/issues" target="_blank" rel="noopener noreferrer">let us know</a> if this is an issue!</p>
     </main>
 </Layout>
 <style>
