--- a/src/components/ResourceCard.astro
+++ b/src/components/ResourceCard.astro
@@ -6,11 +6,12 @@ interface Props {
 	href: string;
     style: string;
     tags: string[];
+    target: string;
 }
 
-const { href, title, subtitle, image, style, tags } = Astro.props;
+const { href, title, subtitle, image, style, tags, target } = Astro.props;
 ---
-<a href={href} class=`linkCardOuter ${style}`>
+<a href={href} class=`linkCardOuter ${style}` target={target}>
         <div class="top">
             <div class="image">
                 <img src={image} alt="image" />
@@ -62,11 +63,6 @@ const { href, title, subtitle, image, style, tags } = Astro.props;
     .tag:hover {
         background: #e4e4e9;
     }
-    .purble {
-        /* background: linear-gradient(29deg, rgba(116,76,213,1) 0%, rgba(108,57,200,1) 26%, rgba(116,76,213,1) 100%)!important; */
-        background: linear-gradient(29deg, rgb(223, 134, 0) 0%, rgb(221, 88, 0), rgb(223, 134, 0) 100%)!important;
-        color: #f9f7ff!important;
-    }
     .linkCardOuter {
         display: flex;
         flex-direction: column;
@@ -85,7 +81,7 @@ const { href, title, subtitle, image, style, tags } = Astro.props;
         transition: all 0.3s ease-in-out;
     }
     .linkCardOuter:hover {
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1);
         transform: translateY(-0.3rem);
     }
     .image {
