--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,7 +74,7 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
         <div class="resources section purpleBg">
             <h1>Resources</h1>
             <div class="resourcesArea">
-                {filteredPosts.map((post) => 
+                {filteredPosts.slice(0, 3).map((post) => 
                     <ResourceCard 
                         href={post.url} 
                         title={String(post.frontmatter.title) + " →"}
@@ -82,6 +82,7 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
                         image={post.frontmatter.image}
                         style=""
                         tags={post.frontmatter.tags}
+                        target=""
                     />
                 )}
                 <ResourceCard 
@@ -91,6 +92,7 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
                     image="https://images.squarespace-cdn.com/content/v1/5f8d6f1d6f5d9d6f06cf8f99/1620275756922-VKCB7CXJKPVYL9XFV08I/pexels-oriel-frankie-ashcroft-6054387.jpg"
                     style="greyBg"
                     tags={["More"]}
+                    target=""
                 />
             </div>
         </div>
@@ -168,6 +170,7 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
         .sponsorLogo {
             width: 5rem;
             margin-right: 2rem;
+            margin-bottom: 1rem;
         }
         .section, .subSection {
             padding: 2rem 2rem;
