--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -3,34 +3,39 @@ import Layout from '../layouts/defaultLayout.astro';
 import ResourceCard from '../components/ResourceCard.astro';
 
 const allPosts = await Astro.glob('../pages/resources/*.md');
+const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 ---
 
 <Layout title="Trans on Campus • Resources">
     <main>
-        <!-- 
-            Resources header
-            Sort by tags
-            Resource cards
-         -->
         <div class="section purpleBg resources">
             <h1>Resources</h1>
             <p>Find resources for helping you navigate your gender identity.</p>
+            <div class="tagsArea">
+                {
+                    tags.map((tag) => (
+                        <a href={`/tags/${tag}`} style="text-decoration:none"><div class="resourceTag">
+                            {tag}
+                        </div></a>
+                    ))
+                }
+            </div>
             <div class="resourcesArea">
-                <!-- {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)} -->
                 {allPosts.map((post) => 
                     <ResourceCard 
-                        href={post.url} 
+                        href={post.frontmatter.pdf ? post.frontmatter.pdf : post.url} 
                         title={String(post.frontmatter.title) + " →"}
                         subtitle={String(post.frontmatter.description)}
                         image={post.frontmatter.image}
                         style=""
                         tags={post.frontmatter.tags}
+                        target={post.frontmatter.pdf ? "_blank" : ""}
                     />
                 )}
             </div>
         </div>
         <div class="section orangeBg reachOut">
-            <div style="margin-right: 10rem;">
+            <div class="infoArea">
                 <h1>Let's talk </h1>
                 <p>Need to know more? Want to share some information?</p>
                 <div class="joinBtns">
@@ -38,7 +43,7 @@ const allPosts = await Astro.glob('../pages/resources/*.md');
                     <div class="splashBtn findMore">Talk on Discord</div>
                 </div>
             </div>
-            <div>
+            <div class="imageArea">
                 <img src="/movieNight.webp" alt="image" class="talkImage"/>
             </div>
         </div>
@@ -46,36 +51,110 @@ const allPosts = await Astro.glob('../pages/resources/*.md');
 </Layout>
 <script>
     (document.querySelector('.navbar') as HTMLElement).style.background = '#fff';
-    // (document.querySelector('.footer') as HTMLElement).style.background = 'none';
-    // // set links in footer to black
-    // document.querySelectorAll('.footer a').forEach((link) => {
-    //     (link as HTMLElement).style.color = '#0b0025';
-    // });
 </script>
 <style>
+    /* Desktop: */
+    @media only screen and (min-width: 800px) {
+        .section {
+            padding: 4rem 7rem 2rem 7rem;
+        }
+        .reachOut {
+            padding: 7rem 12rem 6rem 12rem;
+        }
+        .reachOut h1 {
+            margin-bottom: 1rem;
+            font-size: 4rem;
+        }
+        .reachOut p {
+            font-size: 1.5rem;
+        }
+        .splashBtn {
+            padding: 1rem 2rem;
+            margin-right: 3rem;
+            font-size: 1.2rem;
+        }
+        .talkImage {
+            width: 100%;
+            max-width: 30rem;
+            border-radius: 1rem;
+        }
+        .infoArea {
+            margin-right: 10rem;
+        }
+        h1 {
+            font-size: 3.5rem;
+        }
+        p {
+            font-size: 1.4rem;
+        }
+    }
+    /* Mobile */
+    @media only screen and (max-width: 799px) {
+        .section, .reachOut {
+            padding: 2rem 2rem;
+        }
+        .reachOut h1 {
+            margin-bottom: 1rem;
+            font-size: 2.5rem;
+        }
+        .reachOut p {
+            font-size: 1.2rem;
+        }
+        .splashBtn {
+            padding: 0.8rem 1rem;
+            margin-right: 1rem;
+            font-size: 1rem;
+        }
+        .imageArea {
+            display: none;
+        }
+        h1 {
+            font-size: 2.7rem;
+        }
+        p {
+            font-size: 1rem;
+        }
+    }
+
+    .tagsArea {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: left;
+        margin-bottom: 2rem;
+    }
+    .resourceTag {
+        background-color: #502aa3;
+        color: #f9f7ff;
+        padding: 0.5rem 1rem;
+        border-radius: 9999px;
+        margin-right: 1rem;
+        margin-bottom: 1rem;
+        cursor: pointer;
+        transition: all 0.2s ease-out;
+        padding: 0.5rem 1rem;
+    }
+    .resourceTag:hover {
+        background-color: #3c1f7d;
+    }
     .joinBtns {
         display: flex;
         flex-direction: row;
         align-items: center;
     }
     .splashBtn {
-        padding: 1rem 2rem;
-        margin-right: 3rem;
         border-radius: 0.5rem;
-        font-size: 1.2rem;
         font-weight: 600;
         font-family: "Metropolis", "Inter", system-ui, sans-serif;
         background-color: white;
         color: #170346;
         cursor: pointer;
         transition: all 0.2s ease-out;
+        
     }
     .splashBtn:hover {
         background-color: rgba(255, 255, 255, 0.842);
     }
-    .section {
-        padding: 4rem 7rem 2rem 7rem;
-    }
+
     .purpleBg {
         background: linear-gradient(29deg, rgba(116,76,213,1) 0%, rgba(108,57,200,1) 26%, rgba(116,76,213,1) 100%);
         color: #f9f7ff;
@@ -95,31 +174,16 @@ const allPosts = await Astro.glob('../pages/resources/*.md');
         text-align: center;
     }
     .reachOut {
-        padding: 7rem 12rem 6rem 12rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-    .reachOut h1 {
-        margin-bottom: 1rem;
-        font-size: 4rem;
-    }
-    .reachOut p {
-        font-size: 1.5rem;
-    }
-    .talkImage {
-        width: 100%;
-        max-width: 30rem;
-        border-radius: 1rem;
-    }
     h1 {
-        font-size: 3.5rem;
         font-weight: 700;
         font-family: "Metropolis", "Inter", system-ui, sans-serif;
         margin: 0;
     }
     p {
-        font-size: 1.4rem;
         font-weight: 400;
         font-family: "Metropolis", "Inter", system-ui, sans-serif;
         margin: 0;
