--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@
         <ul class="navbarList">
             <li><a href="/resources/">Resources</a></li>
             <li><a href="/events/">Events</a></li>
-            <li><a href="/linktree/">LinkTree</a></li>
+            <li><a href="/linktree/" target="_blank">LinkTree</a></li>
             <li><a href="/about/">About</a></li>
             <!-- <li><a href="/contact/">Contact</a></li> -->
         </ul>
@@ -39,6 +39,12 @@
             font-size: 16px;
             margin: 4px 2px;
             padding: 14px 20px;
+        }
+        .navbar {
+            /* position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 20;  */
         }
     }
     /* Mobile */
