--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,6 +12,13 @@ import Layout from '../layouts/defaultLayout.astro';
             Could have description of ToC, what it does, etc
             Also  where Qspace is?
             Idk stuff like that ig
+
+            suggestion:
+            -quick history section
+            -toc leaders
+            -Typical events per year
+            -general mission statement
+            -Location on campus (if applicable)
         </p>
     </main>
 </Layout>
