--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
                 <h1>About Us</h1>
                 <p>
                     Trans on Campus is a support network, social group, and advocacy
-                    group for Gender Deverse & Questioning students in Auckland.
+                    group for Gender Diverse & Questioning students in Auckland.
                     <br><br>
                     We provide a safe space for students to meet, socialise, and support each other.
 
@@ -64,11 +64,11 @@ const filteredPosts = allPosts.filter((post) => post.frontmatter.featured === tr
                     ToC members are invited to our awesome events, and every membership helps secure funding to provide more support.
                     Membership doesn't roll over so you need to fill out this form each year.</p>
                 <div class="joinBtns">
-                    <a href="https://forms.gle/YYRaW3nrKDTs3Gus6" class="btnLink target="_blank" rel="noopener noreferrer"">
+                    <a href="https://forms.gle/YYRaW3nrKDTs3Gus6" class="btnLink" target="_blank" rel="noopener noreferrer">
                         <div class="splashBtn findMore purpleBg">Join ToC</div>
                     </a>
                     <a href="/discord" class="btnLink" target="_blank" rel="noopener noreferrer">
-                        <div class="splashBtn findMore purpleBg">Talk on Discord</div>
+                        <div class="splashBtn findMore purpleBg">Chat on Discord</div>
                     </a>
                 </div>
             </div>
