--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -29,7 +29,7 @@ import Layout from '../layouts/linktreeLayout.astro';
                 />
                 <LinkCard
                     href="https://forms.gle/YYRaW3nrKDTs3Gus6"
-                    title="PLEASE SIGN UP HERE!"
+                    title="Please sign up! <3"
                     subtitle="You don't have to be a UoA student :)"
                     image="../tocIcon.webp"
                     style="attention"
